another tedious fun with overlay flicker-fix & some cleanup

--- a/exetra/art.css
+++ b/exetra/art.css
@@ -11,12 +11,6 @@ div#dev-gt-1140{display:block}
         width: auto;
         min-width: 280px;
     }
-    /*#content {
-        padding-bottom: 20px;
-    }*/
-    /*#page #content {
-        padding-bottom: 20px;
-    }*/
     .lightbox .shadow,
     #content .shadow {
         -webkit-box-shadow: none;
@@ -72,13 +66,6 @@ div#dev-gt-1140{display:block}
         margin-bottom: 20px;
         padding: 5px 3% !important;
     }
-    /*#page.fluid #content .content-in .header > .item,
-    #page.fluid #content .content-in .header > form {
-        float: right;
-        margin: 0;
-        padding: 15px 0 0 15px !important;
-        width: 15%;
-    }*/
     .fluid #content .content-in .rightcol {
         float: right;
         width: 80%;
@@ -96,13 +83,6 @@ div#dev-gt-1140{display:block}
     .image-content .filter-box ul li {
         padding-bottom: 15px;
     }
-    /*#page #content .content-in .header form {
-        display: block;
-    }*/
-    /*#page #content .content-in .header * {
-        font-size: 14px;
-        white-space: nowrap;
-    }*/
     .fluid #content .content-in .rightcol .head,
     .fluid #content .content-in .rightcol .head * {
         font-size: 14px;
@@ -140,7 +120,6 @@ div#dev-gt-1140{display:block}
     }
     .lightbox .header a.logo img {
         width: 200px;
-        /*height: auto;*/
     }
     .lightbox .header .arrow {
         display: none;
@@ -515,20 +494,6 @@ div#dev-gt-1140{display:block}
         padding-top: 10px;
         padding-bottom: 10px;
     }
-/*     .lightbox #popup { */
-/*         display: block !important; */
-/*         position: static !important; */
-/*         width: 460px !important; */
-/*         left: 0 !important; */
-/*         top: 0 !important; */
-/*         margin: 20px auto; */
-/*         padding: 20px !important; */
-/*     } */
-    /*#content .cart .leftcol .section input.licence {
-        margin-left: 10%;
-        margin-top: 0;
-        margin-bottom: 0;
-    }*/
     #content .cart .leftcol .section label.licence {
         font-size: 14px;
     }
@@ -750,10 +715,6 @@ div#dev-gt-1140{display:block}
         margin-left: 0;
         margin-top: -31px;
     }
-
-    /*.closebuttonholder.imagedetail > .closebutton {
-        margin: 20px auto;
-    }*/
     .closebutton.inheader {
         /*display: inline-block;*/
         position: static;
@@ -778,16 +739,6 @@ div#dev-gt-1140{display:block}
         padding: 4px 12px 4px 30px;
         background-position: 10px 50%;
     }
-/*     .lightbox .preview .search { */
-/*         padding-bottom: 0; */
-/*     } */
-/*     .lightbox .preview .leftcol .desc table tr th span { */
-/*         display: inline-block; */
-/*         border-radius: 3px; */
-/*         color: #ffffff; */
-/*         margin-right: 0 !important; */
-/*     } */
-/*     .lightbox .preview .leftcol .desc table tr th span a, */
     #resp-kwlist > a {
         color: #404040;
         display: inline-block;
@@ -1072,13 +1023,6 @@ div#dev-gt-1140{display:block}
     #content .cart .payment .clear {
         display: none;
     }
-    /*#content .cart .payment #place_your_order {
-        width: 200px;
-        padding: 10px 0px;
-        height: auto !important;
-        line-height: 38px;
-        font-size: 17px !important;
-    }*/
     #content .cart .total-price p {
         margin-top: 9px;
         padding-right: 0;
@@ -1161,15 +1105,6 @@ div#dev-gt-1140{display:block}
         margin: 0 2% 2% 2%;
         height: auto;
     }
-/*     .image-list { */
-/*         text-align: center; */
-/*     } */
-/*     .image-list li { */
-/*         display: inline-block; */
-/*         float: none; */
-/*         margin-left: 20px; */
-/*         margin-right: 20px; */
-/*     } */
     .image-content .lightbox-category {
         margin-left: -130px !important;
         position: fixed !important;
@@ -1185,6 +1120,9 @@ div#dev-gt-1140{display:block}
         display: block;
         border: 1px solid #E0E0E0
     }
+    .image-list li .image {
+        border-bottom: none;
+    }
     .image-list li .image img {
         vertical-align: middle;
         max-width: 100%;
@@ -1195,9 +1133,12 @@ div#dev-gt-1140{display:block}
     .image-list li .pict span {
         display: none;
     }
+    .image-list li > p {
+       background-image: none;
+    }
     .image-list li .pict {
         position: absolute;
-        margin-top: -235px;
+        margin-top: -237px;
         display: none;
         width: 170px;
         height: 170px;
@@ -1208,11 +1149,6 @@ div#dev-gt-1140{display:block}
     .image-list li.hover .pict {
         display: block;
     }
-    /*.image-list li > p {
-        background-image: none;
-        height: auto !important;
-        max-height: 99999px !important;
-    }*/
     .image-list li .cs_addtocart {
         width: inherit;
         position: absolute;
@@ -1283,10 +1219,10 @@ div#dev-gt-1140{display:block}
         text-align: center;
         font-size: 14px;
     }
-/*     #content .content-in .rightcol .item a { */
-/*         color: #5187B6; */
-/*         text-decoration: underline; */
-/*     } */
+    /*#content .content-in .rightcol .item a {
+        color: #5187B6;
+        text-decoration: underline;
+    }*/
     .lightbox .pricing .rightcol {
         width: 60%;
         padding-left: 0px !important;
@@ -1723,9 +1659,9 @@ div#dev-gt-1140{display:block}
     #page.fluid #content .content-in .header > form {
         position: relative;
         left: -8%;
-        float: right;
+        /*float: right;*/
         margin: 0;
-        padding: 15px 0 0 15px !important;
+        /*padding: 15px 0 0 15px !important;*/
         width: 24%;
     }
     #content #resp-subpagebenefits .home-info > p {
